Working barcode reading, encryption and decryption.
One FAT commit. sorry about that

--- a/peopleflow/templates/kiosks_layout.html
+++ b/peopleflow/templates/kiosks_layout.html
@@ -21,6 +21,9 @@
 toastr.options.positionClass = "toast-bottom-right";
 </script>
 <script src="http://127.0.0.1:8008/assets/js/lib.js"></script>
+<script src="/static/js/sha1.js"></script>
+<script src="/static/js/CryptoJS/rollups/aes.js"></script>
+<script src="/static/js/CryptoJS/components/mode-cfb.js"></script>
 <script src="/static/js/rfid/init.js"></script>
 {% endblock %}
 
